wip for signup flow

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Blue Game</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="customstyle"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <style>
+    .customstyle {
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+  </style>
 </html>
